<resources>
    <string name="app_name">Dermate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_image">Open Image</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="article_head">Skin disease article</string>
    <string name="question">question</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="setting">Settings</string>
    <string name="get_started">Get started!</string>
    <string name="display">DISPLAY</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="request_settings">Change Require Application Restart</string>
    <string name="night_mode_alert">This feature may not work for some devices if night mode system is on</string>
    <string name="change_lang">Change Language</string>
    <string name="Language">LANGUAGE</string>
    <string name="about">ABOUT</string>
    <string name="team">Sarjana Bangkit Team</string>
    <string name="recognise">Recognize Skin Disease</string>
    <string name="take_picture">Take Picture</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="article_provider">Article by</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="prediction">Diagnose</string>
    <string name="diagnose">Diagnose</string>
    <string name="logo">logo</string>
    <string name="image_thumbnail">Image thumbnail</string>
    <string name="fist_page_desc">Know more about your baby skin problem and its possible diagnosis using Artificial Intelligence</string>
    <string name="first_page_title">Find out about your baby\'s skin diseases in a click</string>
    <string name="second_page_desc">By adding follow up question (anamnesis) from authorized doctors to get to know more about your baby\'s current condition</string>
    <string name="second_page_title">We make sure to give accurate diagnosis for your loved one</string>
    <string name="third_page_desc">We provide you number of baby\'s skin disease articles from official healthcare web page</string>
    <string name="third_page_title">Get daily tips and knowledge about baby\'s skin diseases</string>
    <string name="features_list">-Recognize skin disease using image \n-Dark mode support\n-Support multi language(ID,EN)</string>
    <string name="features">Features :</string>
    <string name="version">v 1.0.0</string>
    <string name="version_title">Version</string>
    <string name="known_bugs">Known bugs :</string>
    <string name="whatsapp">Tell us on whatsapp</string>
    <string name="icon">icon</string>
    <string name="disclaimer_title">Disclaimer : </string>
    <string name="disclaimer">All results provided are based on journals, expert interviews and user answers. For more details, please contact your trusted doctor.</string>
    <string name="treatment">Treatment</string>
    <string name="source">Source : </string>
    <string name="disease_related_articles">Disease related article</string>

</resources>